--- a/Css/equipos.css
+++ b/Css/equipos.css
@@ -46,6 +46,38 @@ h2{
     margin-left: 250px;
 }
 
+.search-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.search-container input{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    border: 1px solid var(--Borde);
+    border-radius: 5px;
+    font-size: 14px;
+    position: relative;
+}
+
+/* Este icono tiene un machetazo para encajar ahí ni el... */
+.search-container i{
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 349px;
+    position: absolute;
+    background-color: var(--Negro);
+    color: var(--Blanco);
+    border-radius: 0 5px 5px 0;
+    width: 10%;
+    height: 37px;
+}
+
 /* INICIO TABLA EQUIPOS */
 
 /* General for Table */
@@ -105,16 +137,7 @@ h2{
 }
 
 /* Barra de búsqueda */
-.search-bar {
-    display: block;
-    width: 100%;
-    max-width: 300px;
-    margin-bottom: 20px;
-    padding: 10px 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 14px;
-}
+
 
 /* Inicio Tabla */
 .inventory-table {
